--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,8 @@ include themes/TokyoNight.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      CodeNewRoman Nerd Font Mono
+ #font_family      CodeNewRoman Nerd Font Mono
+ font_family      JetBrainsMonoNL
  bold_font        auto
  italic_font      auto
  bold_italic_font auto
@@ -24,7 +25,7 @@ include themes/TokyoNight.conf
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11
+font_size 10
 
 #: Font size (in pts)
 
