--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -309,18 +309,18 @@ monitor = ${env:MONITOR}
 ;bottom = false
 separator = 
 
-width = 100%
-height = 25
-offset-x = 0%
-offset-y= 0 
-radius =0 
+width = 99%
+height = 35
+offset-x = 5px
+offset-y= 4px 
+radius =10
 fixed-center = true
 bottom = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 2
+line-size = 3
 line-color = #f00
 
 wm-restack = bspwm
@@ -344,7 +344,7 @@ module-margin-left = 0
 module-margin-right = 0
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "CodeNewRoman Nerd Font:style=Italic:size=10;2"
+font-0 = "CodeNewRoman Nerd Font:size=11;2"
 font-1 = "CodeNewRoman Nerd Font:style=Regular:size=11;2"
 font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
 font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
