--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include themes/TokyoNight.conf
 #: characters.
 
  #font_family      CodeNewRoman Nerd Font Mono
- font_family      CodeNewRoman Nerd Font Mono
+ font_family      JetBrains Mono Nerd
  bold_font        auto
  italic_font      auto
  bold_italic_font auto
@@ -25,7 +25,7 @@ include themes/TokyoNight.conf
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 10
 
 #: Font size (in pts)
 
@@ -761,7 +761,7 @@ window_padding_width 8
 
 #: The foreground and background colors
 
-background_opacity 1
+background_opacity 0.8
 
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
