--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,7 +15,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 15.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -31,7 +31,7 @@ rounded-corners-exclude = [
 ];
 round-borders = 1;
 round-borders-exclude = [
-  "class_g = 'TelegramDesktop'",
+  "class_g = 'TelegramDesktop'"
 ];
 
 #################################
@@ -130,18 +130,18 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.06;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.06;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
-fade-exclude = [
+truefade-exclude = [
   "class_g = 'slop'"   # maim
 ]
 
@@ -260,13 +260,13 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  method = "dual_kawase";
   #method = "kernel";
-  strength = 7;
+  strength = 6;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
+  background = true;
+  background-frame = true;
   background-fixed = false;
   kern = "3x3box";
 }
@@ -505,10 +505,10 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = false; shadow = false; }
+  normal = { fade = true; shadow = false; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  dock = { shadow = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.95; }
+  dropdown_menu = { opacity = 0.9; }
 };
